file(GLOB ANKI_INPUT_SOURCES Input.cpp)

if(${ANKI_WINDOW_BACKEND} STREQUAL "GLXX11" OR ${ANKI_WINDOW_BACKEND} STREQUAL "EGLX11")
	set(ANKI_INPUT_SOURCES ${ANKI_INPUT_SOURCES} InputX11.cpp)
elseif(${ANKI_WINDOW_BACKEND} STREQUAL "ANDROID")
	set(ANKI_INPUT_SOURCES ${ANKI_INPUT_SOURCES} InputAndroid.cpp)
elseif(${ANKI_WINDOW_BACKEND} STREQUAL "SDL")
	set(ANKI_INPUT_SOURCES ${ANKI_INPUT_SOURCES} InputSdl.cpp)
else()
	set(ANKI_INPUT_SOURCES ${ANKI_INPUT_SOURCES} InputDummy.cpp)
endif()

add_library(ankiinput ${ANKI_INPUT_SOURCES})
